# gmpxxll

./: .codespellrc  .gitignore  .gitmodules  AUTHORS  ChangeLog  LICENSE  Makefile.am  README.md  asv.conf.json  benchmarks.json  codecov.yml  conda-forge.yml  configure.ac  environment.yml  mpz_class.hpp  pixi.toml  rever.xsh
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-osx.yml  azure-pipelines-win.yml
.ci_support/: linux_coverage.yaml  linux_release.yaml  linux_target_benchmark.yaml  linux_target_style.yaml  linux_target_test.yaml  osx_target_benchmark.yaml  osx_target_coverage.yaml  osx_target_release.yaml  osx_target_style.yaml  osx_target_test.yaml  win_cxx_compiler_vs2008_target_benchmark.yaml  win_cxx_compiler_vs2008_target_coverage.yaml  win_cxx_compiler_vs2008_target_release.yaml  win_cxx_compiler_vs2008_target_style.yaml  win_cxx_compiler_vs2008_target_test.yaml  win_cxx_compiler_vs2015_target_benchmark.yaml  win_cxx_compiler_vs2015_target_coverage.yaml  win_cxx_compiler_vs2015_target_release.yaml  win_cxx_compiler_vs2015_target_style.yaml  win_cxx_compiler_vs2015_target_test.yaml
.github/: codecov.yml
.github/workflows/: benchmark.yml  conda.yml  coverage.yml  doc.yml  lint.yml  test.yml
Azure/: 04f6cb5d-conda-py3.9-automake-benchmark==1.5.0-ccache-cppasv-cxx-compiler-gmp-libtool-make.json  058bc8fa-conda-py3.8-Cython-arb-automake-benchmark==1.5.0-boost-cpp-e-antic-gmp-gtest-libtool-make.json  05b1de7d-conda-py3.8-Cython-arb-automake-benchmark==1.5.0-boost-cpp-e-antic-gmp-gtest-libtool-make.json  087139f8-conda-py3.8-Cython-arb-automake-benchmark==1.5.0-boost-cpp-e-antic-gmp-gtest-libtool-make.json  121c0448-conda-py3.9-automake-benchmark==1.5.0-ccache-cppasv-cxx-compiler-gmp-libtool-make.json  148c74b3-conda-py3.8-Cython-arb-automake-benchmark==1.5.0-boost-cpp-e-antic-gmp-gtest-libtool-make.json  162aa1bb-conda-py3.9-automake-benchmark==1.5.0-ccache-cppasv-cxx-compiler-gmp-libtool-make.json  17a09222-conda-py3.8-Cython-arb-automake-benchmark==1.5.0-boost-cpp-e-antic-gmp-gtest-libtool-make.json  1a5fd8b6-conda-py3.10-automake-benchmark==1.5.0-ccache-cppasv-cxx-compiler-gmp-libtool-make.json  285541d6-conda-py3.8-Cython-arb-automake-benchmark==1.5.0-boost-cpp-e-antic-gmp-gtest-libtool-make.json  2c42d53c-conda-py3.10-automake-benchmark==1.5.0-ccache-cppasv-cxx-compiler-gmp-libtool-make.json  31b915f6-conda-py3.9-automake-benchmark==1.5.0-ccache-cppasv-cxx-compiler-gmp-libtool-make.json  356e5b68-conda-py3.9-automake-benchmark==1.5.0-ccache-cppasv-cxx-compiler-gmp-libtool-make.json  474ac8c8-conda-py3.8-Cython-arb-automake-benchmark==1.5.0-boost-cpp-e-antic-gmp-gtest-libtool-make.json  5fa70f21-conda-py3.9-automake-benchmark==1.5.0-ccache-cppasv-cxx-compiler-gmp-libtool-make.json  65196db5-conda-py3.9-automake-benchmark==1.5.0-ccache-cppasv-cxx-compiler-gmp-libtool-make.json  6e14b9ef-conda-py3.8-Cython-arb-automake-benchmark==1.5.0-boost-cpp-e-antic-gmp-gtest-libtool-make.json  7c8f8d11-conda-py3.8-Cython-arb-automake-benchmark==1.5.0-boost-cpp-e-antic-gmp-gtest-libtool-make.json  85c52c31-conda-py3.9-automake-benchmark==1.5.0-ccache-cppasv-cxx-compiler-gmp-libtool-make.json  8bb8279f-conda-py3.8-Cython-arb-automake-benchmark==1.5.0-boost-cpp-e-antic-gmp-gtest-libtool-make.json  8bc296e1-conda-py3.9-automake-benchmark==1.5.0-ccache-cppasv-cxx-compiler-gmp-libtool-make.json  937951e3-conda-py3.8-Cython-arb-automake-benchmark==1.5.0-boost-cpp-e-antic-gmp-gtest-libtool-make.json  9829bd9f-conda-py3.8-Cython-arb-automake-benchmark==1.5.0-boost-cpp-e-antic-gmp-gtest-libtool-make.json  9a9fb899-conda-py3.8-Cython-arb-automake-benchmark==1.5.0-boost-cpp-e-antic-gmp-gtest-libtool-make.json  9dd84521-conda-py3.8-Cython-arb-automake-benchmark==1.5.0-boost-cpp-e-antic-gmp-gtest-libtool-make.json  a3531dd4-conda-py3.10-automake-benchmark==1.5.0-ccache-cppasv-cxx-compiler-gmp-libtool-make.json  b7a1cefd-conda-py3.9-automake-benchmark==1.5.0-ccache-cppasv-cxx-compiler-gmp-libtool-make.json  baf26943-conda-py3.8-Cython-arb-automake-benchmark==1.5.0-boost-cpp-e-antic-gmp-gtest-libtool-make.json  bed6d9a0-conda-py3.10-automake-benchmark==1.5.0-ccache-cppasv-cxx-compiler-gmp-libtool-make.json  ce98fb6b-conda-py3.10-automake-benchmark==1.5.0-ccache-cppasv-cxx-compiler-gmp-libtool-make.json  cf34d65f-conda-py3.8-Cython-arb-automake-benchmark==1.5.0-boost-cpp-e-antic-gmp-gtest-libtool-make.json  db27b9aa-conda-py3.8-Cython-arb-automake-benchmark==1.5.0-boost-cpp-e-antic-gmp-gtest-libtool-make.json  e42adb22-conda-py3.8-Cython-arb-automake-benchmark==1.5.0-boost-cpp-e-antic-gmp-gtest-libtool-make.json  eb4c0dcf-conda-py3.9-automake-benchmark==1.5.0-ccache-cxx-compiler-flatsurf__cppasv-gmp-libtool-make.json  feb113dd-conda-py3.9-automake-benchmark==1.5.0-ccache-cppasv-cxx-compiler-gmp-libtool-make.json
asv/: index.json  info.json  regressions.xml
asv/graphs/summary/: FromInt.track_time.json  FromLongLong.track_time.json  ToInt.track_time.json  ToLongLong.track_time.json
benchmark/: .gitignore  Makefile.am  main.cc  mpz_class.benchmark.cc
doc/: configure.ac  environment.yml
doc/manual/: Doxyfile  Makefile.am  README.md  conf.py  gmpxxll.rst  index.rst
doc/manual/gmpxxll/: extra.css  index.md
doc/news/: TEMPLATE.rst  build.rst  changelog.rst  configure-win.rst  doc.rst  pixi.rst
doc/standardese/: .gitignore  Gemfile  README.md  _config.yml  index.md
doc/standardese/_includes/: footer.html
doc/standardese/assets/: main.scss
docs/: .buildinfo  404.html  genindex.html  gmpxxll.html  index.html  mkdocs.yml  objects.inv  search.html  searchindex.js  sitemap.xml
docs/.doctrees/: environment.pickle  gmpxxll.doctree  index.doctree
docs/asv/: index.json  info.json  regressions.xml
docs/asv/graphs/summary/: FromInt.track_time.json  (+3 more)
docs/doc_mpz_class_hpp/: index.html
docs/search/: search_index.json
gmpxxll/: mpz_class.hpp
m4/: ax_cxx_check_lib.m4
recipe/: build.sh  conda_build_config.yaml  environment.sh  meta.yaml
test/: .gitignore  Makefile.am  main.cc  mpz_class.test.cc
tools/asv/: __init__.py
tools/rever/: autodist.xsh
